plugins {
    id 'com.android.application'
    id 'org.jetbrains.kotlin.android'
    id 'kotlin-android-extensions'
}
apply plugin: 'com.google.gms.google-services'
apply plugin: "de.mannodermaus.android-junit5"
apply plugin: 'kotlin-android'
apply plugin: 'kotlin-kapt'

android {
    compileSdk 32

    defaultConfig {
        applicationId "com.example.cryptchat"
        minSdk 21
        targetSdk 32
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        testInstrumentationRunnerArguments runnerBuilder: 'de.mannodermaus.junit5.AndroidJUnit5Builder'
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }

    kotlinOptions {
        freeCompilerArgs = ['-Xjvm-default=enable']
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
    kotlinOptions {
        jvmTarget = '11'
    }
    sourceSets {
        test.java.srcDirs += 'src/test/kotlin'
        androidTest.java.srcDirs += 'src/androidTest/kotlin'
    }
    testOptions {
        unitTests.all {
            useJUnitPlatform()
            jvmArgs '--enable-preview'
        }
    }
    buildFeatures{
        viewBinding true
    }
}

//Picasso
dependencies {
    implementation 'com.squareup.picasso:picasso:2.71828'
}

//Firebase
dependencies {
    implementation platform('com.google.firebase:firebase-bom:29.1.0')
    implementation 'com.google.firebase:firebase-database:20.0.3'
    implementation 'com.google.firebase:firebase-auth:21.0.1'
    implementation 'com.google.firebase:firebase-auth-ktx'
}

//Testing UI
dependencies {
    debugImplementation("androidx.fragment:fragment-testing:1.4.1")
    androidTestImplementation "androidx.navigation:navigation-testing:2.4.1"
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
    androidTestImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
    androidTestImplementation 'org.junit.platform:junit-platform-commons:1.8.2'
    androidTestImplementation 'androidx.test:core:1.4.1-alpha04'
    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
    androidTestImplementation 'com.android.support.test:rules:1.0.2'
    androidTestImplementation 'com.android.support.test:runner:1.0.2'
    androidTestImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
    androidTestImplementation 'androidx.test:core-ktx:1.4.0'

    androidTestImplementation "de.mannodermaus.junit5:android-test-core:1.3.0"
    androidTestRuntimeOnly "de.mannodermaus.junit5:android-test-runner:1.3.0"

    androidTestImplementation "androidx.navigation:navigation-testing:2.4.1"
//    debugImplementation("androidx.fragment:fragment-testing:1.5.0-alpha03")
//    debugImplementation("androidx.fragment:fragment-ktx:1.5.0-alpha03")
    debugImplementation 'androidx.test:core:1.4.1-alpha04'
    debugImplementation("androidx.test:rules:1.4.0")
    debugImplementation("androidx.test:runner:1.4.0")

    androidTestImplementation 'com.github.levibostian:RecyclerViewMatcher:0.1.0'
}

//Testing (Unit)
dependencies {
    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
    testImplementation 'org.junit.platform:junit-platform-commons:1.8.2'
    testImplementation 'androidx.test.ext:junit:1.1.3'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
}

//Lifecycle
dependencies {
    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
    //noinspection LifecycleAnnotationProcessorWithJava8
    kapt "androidx.lifecycle:lifecycle-compiler:2.5.0-alpha03"
    implementation 'androidx.fragment:fragment-ktx:1.4.1'
}

//Navigation
dependencies {
    implementation 'androidx.navigation:navigation-ui-ktx:2.4.1'
    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.1'
}

dependencies {
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'androidx.core:core-ktx:1.7.0'
    implementation 'androidx.appcompat:appcompat:1.4.1'
    implementation 'com.google.android.material:material:1.5.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
}